# support-center

./: .gitignore  README.md  Rust_CRD.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/examples/: seed.rs
backend/migrations/: 0001_init.sql  0002_phase2.sql  0003_activity.sql  0004_conversations.sql  0005_messaging.sql  0006_realtime.sql  0007_realtime2.sql  0008_reserved_noop.sql  0009_channels.sql  0010_files.sql  0011_notifications.sql  0012_agent_position.sql  0013_message_read_at.sql  0014_shopee_shops.sql  0015_realtime_customer_fanout.sql  0016_auth_token_valid_after.sql  0017_webhook_replay_events.sql  0018_realtime_broadcast_fanout.sql  0019_teams_qr_code_exclude_deleted.sql
backend/src/: app.rs  config.rs  crypto.rs  db.rs  envelope.rs  error.rs  lib.rs  locks.rs  main.rs  platform.rs  state.rs
backend/src/domain/: mod.rs
backend/src/middleware/: auth.rs  cookies.rs  cors.rs  csrf.rs  metrics.rs  mod.rs  rate_limit.rs  security_headers.rs
backend/src/realtime/: broadcaster.rs  collaboration.rs  customer.rs  endpoints.rs  gate.rs  hub.rs  latest.rs  mod.rs  module.rs  (+3 more)
backend/tests/: activity.rs  agents.rs  analytics.rs  auth.rs  auto_reply.rs  channels.rs  collaboration.rs  conversations.rs  customer_conversations.rs  customer_realtime.rs  customers.rs  delayed_messages.rs  files.rs  liff.rs  messaging.rs  monitoring.rs  notifications.rs  pipeline.rs  queue.rs  realtime.rs  realtime_module.rs  realtime_rooms.rs  realtime_user_sessions.rs  reports.rs  sessions.rs  shopee.rs  system.rs  tags.rs  teams.rs  webhooks.rs
(+265 files in other folders)
