[package]
name = "mcss-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcss_backend"
path = "src/lib.rs"

[[bin]]
name = "mcss-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dotenvy = "0.15"
http = "1"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.29"
